Union rama fonseca y rama yeisson

--- a/yaf-inmobiliaria-angular/src/app/inmueble/inmueble.component.html
+++ b/yaf-inmobiliaria-angular/src/app/inmueble/inmueble.component.html
@@ -102,7 +102,7 @@
                 <h5 class="card-title Title">{{inmueble.IdInmueble_Inmuebles}}. {{inmueble.NombreInmueble_Inmuebles}}
                 </h5>
               </div>
-              <img [attr.src]="'../../assets/image/'+ inmueble.IdTipoInmueble_Inmuebles + '.jpeg'" class="card-img-top"
+              <img style="height: 150px" [attr.src]="'../../assets/image/'+ inmueble.IdTipoInmueble_Inmuebles + '.jpeg'" class="card-img-top"
                 alt="...">
               <div class="card-body">
                 <div>
