--- a/yaf-inmobiliaria-angular/src/app/inicio/inicio.component.html
+++ b/yaf-inmobiliaria-angular/src/app/inicio/inicio.component.html
@@ -1,7 +1,7 @@
 <section class="bienvenidos">
   <div class="texto-encabezado text-xs-center">
       <div class="container">
-          <h1 class="display-3">Encuentra la mejor Vivienda para ti! </h1>
+          <h1 class="display-3 animated flip">Encuentra la mejor Vivienda para ti! </h1>
           <p>La comodidad es algo que no te puedes dar el lujo de negar</p>
       </div>
   </div>
@@ -12,8 +12,8 @@
   </div> -->
 </section>
 <section class="presentacion " id="presentacion">
-  <div class="container">
-     <a ><h2 class="display-3 text-md-left wow slideInLeft">¿Quienes somos? </h2></a> 
+  <div class="container ">
+     <a ><h2 class="display-3 text-md-left wow slideInLeft ">¿Quienes somos? </h2></a> 
        <div class="row">
            <div class="col-xs-12 col-md-8">
               <p>
