--- a/yaf-inmobiliaria-angular/src/app/inmueble/inmueble.component.html
+++ b/yaf-inmobiliaria-angular/src/app/inmueble/inmueble.component.html
@@ -144,7 +144,7 @@
                         <select class="custom-select" name="tipInmueble"
                           [(ngModel)]="ActulizarInmueble.IdTipoInmueble_Inmuebles">
                           <option *ngFor="let TipInmueble of TipoInmuebles  "
-                            value="{{TipInmueble.IdTipoInmueble_TipoInmuebles }}">{{TipInmueble.NombreTipoInmueble}}
+                            value="{{TipInmueble.IdTipoInmueble_TipoInmuebles }}">{{TipInmueble.NombreTipoInmueble_TipoInmuebles}}
                           </option>
                         </select>
                       </div>
