--- a/yaf-inmobiliaria-angular/src/app/inicio/inicio.component.html
+++ b/yaf-inmobiliaria-angular/src/app/inicio/inicio.component.html
@@ -1,8 +1,8 @@
 <section class="bienvenidos">
   <div class="texto-encabezado text-xs-center">
       <div class="container">
-          <h1 class="display-3">Encuentra la mejor Vivienda para ti! </h1>
-          <p>La comodidad es algo que no te puedes dar el lujo de negar</p>
+          <h1 class="display-3 animated bounce bounceIn delay-0.1s">Encuentra la mejor Vivienda para ti! </h1>
+          <p class="animated fadeInRightBig delay-1s">La comodidad es algo que no te puedes dar el lujo de negar</p>
       </div>
   </div>
   <!-- <div class="div-flecha_bajar" >
@@ -13,7 +13,7 @@
 </section>
 <section class="presentacion " id="presentacion">
   <div class="container">
-     <a ><h2 class="display-3 text-md-left wow slideInLeft">¿Quienes somos? </h2></a> 
+     <a ><h2 class="display-3 text-md-left wow ">¿Quienes somos? </h2></a> 
        <div class="row">
            <div class="col-xs-12 col-md-8">
               <p>
@@ -28,7 +28,7 @@
               </p> 
           </div>       
           <div class="col-xs-12 col-md-4"> 
-                  <img src="../../assets/image/familia.svg" alt="yaf">                       
+                  <img  src="../../assets/image/familia.svg" alt="yaf">                       
           </div>   
       </div>
   </div>
@@ -37,13 +37,13 @@
 <section>
       
 <div class="container">
-<h1 id="who">Conoce un poco mas de nosotros</h1>
+<h1 id="who" class="">Conoce un poco mas de nosotros</h1>
 <hr class="my-4">
 <h4 class="center-text">Fundadores</h4>
 <div class="row">
 <div class="col-md-4 ">
 <div class="center">
-  <img class="img-fun " src="../../assets/image/Fonseca.jpg">
+  <img class="img-fun animated infinite flipInX slow" src="../../assets/image/Fonseca.jpg">
   <div class="text-img">
     <p class="center-text">Sebastian Fonseca<br>(Diseñador)</p>
   </div>
@@ -51,7 +51,7 @@
 </div>
 <div class="col-md-4">
 <div class="center">
-  <img class="img-fun " src="../../assets/image/Alejandro.jpg">
+  <img class="img-fun animated infinite flipInX slow" src="../../assets/image/Alejandro.jpg">
   <div class="text-img">
     <p class="center-text">Camilo Buitrago<br>(Programador)</p>
   </div>
@@ -59,7 +59,7 @@
 </div>
 <div class="col-md-4">
 <div class="center">
-  <img class="img-fun " src="../../assets/image/yo.jpg">
+  <img class="img-fun animated infinite flipInX slow" src="../../assets/image/yo.jpg">
   <div class="text-img">
     <p class="center-text">Yeisson Jimenez<br>(Desarrollador)</p>
   </div>
