--- a/yaf-inmobiliaria-angular/src/app/agente/agente.component.html
+++ b/yaf-inmobiliaria-angular/src/app/agente/agente.component.html
@@ -13,19 +13,19 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="agente#about">Bienvenidos</a>
+            <a class="nav-link js-scroll-trigger animated zoomInRight" href="agente#about">Bienvenidos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="agente#crear">Crear</a>
+            <a class="nav-link js-scroll-trigger animated zoomInRight" href="agente#crear">Crear</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="agente#education">Modificar</a>
+            <a class="nav-link js-scroll-trigger animated zoomInRight" href="agente#education">Modificar</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="agente#skills">Busca Personalizado</a>
+            <a class="nav-link js-scroll-trigger animated zoomInRight" href="agente#skills">Busca Personalizado</a>
           </li>
             <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="agente#listar">listar</a>
+            <a class="nav-link js-scroll-trigger animated zoomInRight" href="agente#listar">listar</a>
           </li>
         </ul>
       </div>
@@ -33,12 +33,12 @@
     <div class="container-fluid p-0">
       <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
         <div class="w-100">
-          <h1 class="mb-0">Pestaña dedicada para
+          <h1 class="mb-0 animated pulse">Pestaña dedicada para
             <span class="text-primary"> Agentes </span>
           </h1>
-          <div class="subheading mb-5">Nuestros agentes son los encargados de mostrar nuestros inmuebles·
+          <div class="subheading mb-5 animated bounceInRight">Nuestros agentes son los encargados de mostrar nuestros inmuebles·
           </div>
-          <p class="lead mb-5">Busca,creo o modifica un agente.</p>
+          <p class="lead mb-5 animated bounceInRight">Busca,creo o modifica un agente.</p>
         </div>
       </section>
       <hr class="m-0">
