--- a/yaf-inmobiliaria-angular/src/app/ayuda/ayuda.component.html
+++ b/yaf-inmobiliaria-angular/src/app/ayuda/ayuda.component.html
@@ -45,5 +45,156 @@
         <span class="sr-only">Next</span>
       </a>
     </div>
+<!--cuadros de ayuda-->
+    <div class="paginas-internas">  
+        <section class="ruta p-y-1">
+        </section>
+        <main class="p-y-1 lista-servicios">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <article class="item-servicios">
+                            <i class="fa fa-volume-control-phone" aria-hidden="true"></i>
+                            <h4>Linea al cliente</h4>
+                            <p>
+                                Bogotá: 7561616
+                                <br> Cali: 4891616
+                                <br> Medellín: 6041616
+                            </p>
+                            <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#servicio1">Más información</a>
+                        </article>
+                    </div>
+                    <div class="col-md-4">
+                        <article class="item-servicios">
+                            <i class="fa fa-clock-o" aria-hidden="true"></i>
+                            <h4>Horarios de atención</h4>
+                            <p>
+                               De lunes a viernes de 10:00 am a 4:00 pm
+                            </p>
+                            <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#servicio2">Más información</a>
+    
+                        </article>
+                    </div>
+                    <div class="col-md-4">
+                        <article class="item-servicios">
+                            <i class="fa fa-commenting-o" aria-hidden="true"></i>
+                            <h4>Correo electronico</h4>
+                            <p>
+                                Por algun reclamo o queja puedes enviar un correo a yafyaf@gmail.com
+                            </p>
+                            <a href="#" class="btn btn-primary" data-toggle="modal" data-target="#servicio3">Más información</a>
+    
+                        </article>
+                    </div>
+    
+                </div>
+            </div>
+        </main>
+        <!-- Modal 1  -->
+        <div class="modal fade" id="servicio1" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title">Linea al cliente</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+    
+                            <div class="col-md-8">
+                                <br> Bogotá: 0317561616
+                                <br>Cali: 0324891616
+                                <br>Ibagué: 0382771616
+                                <br>Medellín: 0346041616
+                                <br>Neiva: 0388631616
+                                <br>Pereira: 0363401616
+                                <br>Bucaramanga: 0376971616
+                                <br>Barranquilla: 0353851616
+                                <br>Cartagena: 0356931616
+                                <br>Cúcuta: 0375955195
+                                <br>Santa Marta: 0354365966
+                                <br>Villavicencio: 0386836126
+                                <br>Valledupar: 0355898480
+                                <br>Popayán: 0328353735
+                                <br>Resto del País: 018000522222
+                            </div>
+    
+                            <div class="col-md-4">
+                                <img src="images/servicio-1.svg" alt="" width="200" class="img-fluid m-x-auto">
+                            </div>
+                        </div>
+    
+                    </div>
+    
+                </div>
+            </div>
+        </div>
+    
+    
+        <!-- Modal 2  -->
+        <div class="modal fade" id="servicio2" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title">Horarios de atención</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+    
+                            <div class="col-md-8">
+                                Hemos dispuesto un espacio donde podrá comunicarse con un asesor virtual , desde cualquier lugar del mundo; este sistema le permitirá conocer más sobre nuestros productos, brindándole una asesoría personalizada, resolviendo sus inquietudes de una manera ágil y rápida.
+                            </div>
+    
+                            <div class="col-md-4">
+                                <img src="images/servicio-2.svg" alt="" width="200" class="img-fluid m-x-auto">
+                            </div>
+                        </div>
+    
+                    </div>
+    
+                </div>
+            </div>
+        </div>
+    
+    
+        <!-- Modal 2  -->
+        <div class="modal fade" id="servicio3" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog modal-lg" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                        <h4 class="modal-title">Otras redes sociales.</h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+    
+                            <div class="col-md-8">
+                                facebook: https://www.facebook.com/YAF-257217418259266/?modal=admin_todo_tour
+                            </div>
+    
+                            <div class="col-md-4">
+                                <img src="images/servicio-3.svg" alt="" width="200" class="img-fluid m-x-auto m-t-2">
+                            </div>
+                        </div>
+                    </div>
+    
+                </div>
+            </div>
+        </div>
+    
+    
+        <!-- Carga de archivos  JS -->
+    
+        <script src="js/jquery.min.js"></script>
+        <script src="js/bootstrap.min.js"></script>
+    
+    </div> 
  
   
