--- a/yaf-inmobiliaria-angular/src/app/informes/informes.component.html
+++ b/yaf-inmobiliaria-angular/src/app/informes/informes.component.html
@@ -17,14 +17,14 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="informes#inmuebleTiempo" target="_self">Citas por inmubles periodo
+          <a class="nav-link js-scroll-trigger animated zoomInRight" href="informes#inmuebleTiempo" target="_self">Citas por inmubles periodo
             y de tiempo</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="informes#agenteTiempo">Citas por agente periodo y de tiempo</a>
+          <a class="nav-link js-scroll-trigger animated zoomInRight" href="informes#agenteTiempo">Citas por agente periodo y de tiempo</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="informes#clienteTiempo">Citas por cliente periodo y de tiempo</a>
+          <a class="nav-link js-scroll-trigger animated zoomInRight" href="informes#clienteTiempo">Citas por cliente periodo y de tiempo</a>
         </li>
       </ul>
     </div>
@@ -37,8 +37,8 @@
             //   Citas por inmubles periodo y de tiempo              \\
             // \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ \\ -->
     <section class="resume-section p-3 p-lg-5  " id="inmuebleTiempo">
-      <h3>Citas por inmubles periodo y de tiempo</h3>
-      <p>Selecione el id del inmueble y el intervalo de fecha.</p>
+      <h3 class="animated zoomIn">Citas por inmubles periodo y de tiempo</h3>
+      <p class="animated zoomIn">Selecione el id del inmueble y el intervalo de fecha.</p>
       <form>
         <div class="form-group">
           <label for="idInmueble">Selecione id de Inmueble:</label>
