--- a/yaf-inmobiliaria-angular/src/app/inmueble/inmueble.component.html
+++ b/yaf-inmobiliaria-angular/src/app/inmueble/inmueble.component.html
@@ -17,13 +17,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="inmuebles#crearInmueble" target="_self">Crear</a>
+          <a class="nav-link js-scroll-trigger animated zoomInRight" href="inmuebles#crearInmueble" target="_self">Crear</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="inmuebles#listar">Listar</a>
+          <a class="nav-link js-scroll-trigger animated zoomInRight" href="inmuebles#listar">Listar</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="inmuebles#buscar">Buscar</a>
+          <a class="nav-link js-scroll-trigger animated zoomInRight" href="inmuebles#buscar">Buscar</a>
         </li>
       </ul>
     </div>
