--- a/yaf-inmobiliaria-angular/src/app/agente/agente.component.html
+++ b/yaf-inmobiliaria-angular/src/app/agente/agente.component.html
@@ -344,7 +344,7 @@
   
       <hr class="m-0">
   
-      <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="listarr">
+      <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="listar">
         <div class="w-100">
           <h2 class="mb-5">Listar</h2>
           <button type="button" class="btn btn-primary"(click)= "agentestraer();">Buscar</button>
