--- a/yaf-inmobiliaria-angular/src/app/ayuda/ayuda.component.html
+++ b/yaf-inmobiliaria-angular/src/app/ayuda/ayuda.component.html
@@ -18,7 +18,7 @@
                   </button>
                 </div>
                     <div class="modal-body">
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/NLXVOEmnCmg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/tv_NgDj-gBA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
