--- a/yaf-inmobiliaria-angular/src/app/inmueble/inmueble.component.html
+++ b/yaf-inmobiliaria-angular/src/app/inmueble/inmueble.component.html
@@ -48,9 +48,9 @@
             </div>
             <select class="custom-select" (change)="selectTipInm($event)" id="tipInmueble">
               <option *ngFor="let TipInmueble of TipoInmuebles  " value="{{TipInmueble.IdTipoInmueble_TipoInmuebles }}">
-                {{TipInmueble.NombreTipoInmueble}}</option>
+                {{TipInmueble.NombreTipoInmueble_TipoInmuebles}}</option>
             </select>
-          </div>
+          </div>           
         </div>
         <div class="form-group">
           <label for="nombreInmueble" class="col-form-label">Nombre:</label>
