Vista citas arreglada

--- a/yaf-inmobiliaria-angular/src/app/informes/informes.component.html
+++ b/yaf-inmobiliaria-angular/src/app/informes/informes.component.html
@@ -219,7 +219,7 @@
             <th>Hora cita</th>
           </tr>
           <tr *ngFor="let cleinte of informeClienteArray">
-            <td>{{cleinte.NombreAgente}}</td>
+            <td>{{cleinte.NombreAgentes}}</td>
             <td>{{cleinte.NombreTipodeDocumento_TipodeDocumentos}}</td>
             <td>{{cleinte.NumeroDocumento_Agentes}}</td>
             <td>{{cleinte.Correo_Agentes}}</td>
